Changed the src images of directories to links of internet, in order to show them without upploading the resources to the repo

--- a/claseVideo/index.html
+++ b/claseVideo/index.html
@@ -9,13 +9,14 @@
   <body>
     <main>
       <section>
-        <figure>
-          <img
-            src="https://images.pexels.com/photos/1543793/pexels-photo-1543793.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="a big cat"
+        <video controls preload="auto">
+          <source
+            src="./Actividad16-RuízRubioEfrén-AlmacenesDatos.mkv#t=10,30"
           />
-        </figure>
-        <figcaption>Es una imagen de un gato</figcaption>
+          <source
+            src="./Actividad16-RuízRubioEfrén-AlmacenesDatos.mp4#t=10,30"
+          />
+        </video>
       </section>
     </main>
   </body>
