--- a/main/index.html
+++ b/main/index.html
@@ -28,7 +28,7 @@
           >
           <figure>
             <img
-              src="./pics/manzana.jpg"
+              src="https://images.pexels.com/photos/8805439/pexels-photo-8805439.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260"
               alt="Foto de una manzana"
               width="100px"
             />
@@ -38,7 +38,11 @@
             ><li>Pera</li></a
           >
           <figure>
-            <img src="./pics/pera.jpg" alt="Foto de una pera" width="100px" />
+            <img
+              src="https://images.pexels.com/photos/7586241/pexels-photo-7586241.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              alt="Foto de una pera"
+              width="100px"
+            />
           </figure>
           <a
             href="https://www.bing.com/search?q=licuado++de+naranja&qs=n&form=QBRE&sp=-1&pq=licuado+de+naranja&sc=5-18&sk=&cvid=3D1BC0E080954A4B8BC9D0E72D16C57F"
@@ -46,7 +50,7 @@
           >
           <figure>
             <img
-              src="./pics/naranja.jpg"
+              src="https://images.pexels.com/photos/616838/pexels-photo-616838.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
               alt="Foto de una naranja"
               width="100px"
             />
@@ -59,21 +63,33 @@
             ><li>Res</li></a
           >
           <figure>
-            <img src="./pics/res.jpg" alt="Foto de una res" width="100px" />
+            <img
+              src="https://images.pexels.com/photos/1251208/pexels-photo-1251208.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              alt="Foto de una res"
+              width="100px"
+            />
           </figure>
           <a
             href="https://www.bing.com/search?q=caldo+de+pollo&qs=n&form=QBRE&sp=-1&pq=caldo+de+poll&sc=6-13&sk=&cvid=F56ECE665A1F4D6BBE134443FBE656B9"
             ><li>Pollo</li></a
           >
           <figure>
-            <img src="./pics/pollo.jpg" alt="Foto de una pollo" width="100px" />
+            <img
+              src="https://images.pexels.com/photos/5718024/pexels-photo-5718024.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              alt="Foto de una pollo"
+              width="100px"
+            />
           </figure>
           <a
             href="https://www.bing.com/search?q=chuletas+de+cerdo&qs=n&form=QBRE&sp=-1&pq=chuletas+de+cer&sc=6-15&sk=&cvid=08174F8852984775B859400B3CFFAD4F"
             ><li>Cerdo</li></a
           >
           <figure>
-            <img src="./pics/cerdo.jpg" alt="Foto de una cerdo" width="100px" />
+            <img
+              src="https://images.pexels.com/photos/416471/pexels-photo-416471.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              alt="Foto de una cerdo"
+              width="100px"
+            />
           </figure>
         </ol>
         <li>Lácteos</li>
@@ -84,7 +100,7 @@
           >
           <figure>
             <img
-              src="./pics/yogurt.jpg"
+              src="https://images.pexels.com/photos/5945660/pexels-photo-5945660.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
               alt="Foto de una yogurt"
               width="100px"
             />
@@ -94,14 +110,22 @@
             ><li>Leche</li></a
           >
           <figure>
-            <img src="./pics/leche.jpg" alt="Foto de una leche" width="100px" />
+            <img
+              src="https://images.pexels.com/photos/248412/pexels-photo-248412.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              alt="Foto de una leche"
+              width="100px"
+            />
           </figure>
           <a
             href="https://www.bing.com/search?q=queso+recetas&qs=n&form=QBRE&sp=-1&pq=queso+receta&sc=6-12&sk=&cvid=D958A15D3BCB4C53A71CBBEC848BF8A5"
             ><li>Queso</li></a
           >
           <figure>
-            <img src="./pics/queso.jpg" alt="Foto de una queso" width="100px" />
+            <img
+              src="https://images.pexels.com/photos/821365/pexels-photo-821365.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              alt="Foto de una queso"
+              width="100px"
+            />
           </figure>
         </ol>
       </ul>
