Adding CSS scripts and styling

--- a/main/index.html
+++ b/main/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>Página desarrollada con HTML y CSS</title>
   </head>
@@ -20,7 +20,7 @@
         <article></article>
       </section>
       <ul>
-        <li>Frutas</li>
+        <li class="list">Frutas</li>
         <ol>
           <a
             href="https://www.bing.com/search?q=ensalada+de+manzana&qs=n&form=QBRE&sp=-1&pq=&sc=0-0&sk=&cvid=1EE10EF7E1FB4449ABC2C4607365EA45"
@@ -56,7 +56,7 @@
             />
           </figure>
         </ol>
-        <li>Carnes</li>
+        <li class="list">Carnes</li>
         <ol>
           <a
             href="https://www.bing.com/search?q=filete+de+res&qs=n&form=QBRE&sp=-1&pq=filete+de+re&sc=6-12&sk=&cvid=37783B27F4DD4408AA4616417C4F6C88"
@@ -92,7 +92,7 @@
             />
           </figure>
         </ol>
-        <li>Lácteos</li>
+        <li class="list">Lácteos</li>
         <ol>
           <a
             href="https://www.bing.com/search?PC=U523&q=yogurt+recetas&pglt=41&FORM=ANNTA1"
