Added comments for better understanding of the topic

--- a/claseAutocompleteRequired/index.html
+++ b/claseAutocompleteRequired/index.html
@@ -9,6 +9,10 @@
   <body>
     <main>
       <section>
+        <!-- La etiqueta "input" tiene como atributo algo llamado "autocomplete", el
+          cual, si el usuario ya ha realizado formularios similares, pueden guardarse
+          dichos datos para que el usuario los reutilice en otros formularios, 
+          haciendo que el usuario tenga menor esfuerzo al rellenar nuestro formulario -->
         <form action="">
           <label for="name">
             <span>What is your name?</span>
