--- a/claseButton/index.html
+++ b/claseButton/index.html
@@ -9,6 +9,11 @@
   <body>
     <main>
       <section>
+        <!-- Para el caso de los botones, siempre utilizar input si es un botón para
+          realizar un envío de un formulario a un endpoint, la diferencia con la etiqueta
+          button, es que ésta tiene mayor personalización, por lo que puede utilizarse
+          para otras cosas distintas, que simplemente envíar un formulario, por ejemplo, 
+          un botón de likes en FB -->
         <input type="submit" value="Name" />
         <button type="submit">Submit</button>
       </section>
