--- a/claseCSS/index.html
+++ b/claseCSS/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Para hacer uso del CSS, se necesita referenciar el archivo css con la etiqueta
+      link, esta toma como atributos "rel", el cual es el tipo de archivo que se está
+      referenciando, y el "href", el cual debe de tener la ruta de nuestro archivo en 
+      cuestión -->
     <link rel="stylesheet" href="./styles.css" />
     <title>CSS</title>
   </head>
