--- a/claseCalendario/index.html
+++ b/claseCalendario/index.html
@@ -28,6 +28,10 @@
           </label>
           <input type="submit" />
         </form> -->
+        <!-- Se pueden hacer formularios con calendario de distintas maneras, pero
+          siempre debemos de buscar realizar un formulario que sea fácil de responder,
+          ya que el usuario puede cansarse y decidir no contestar el formulario si
+          este es muy complejo -->
         <form action="">
           <label for="calendar">
             <span>Calendario</span>
