--- a/claseForms/index.html
+++ b/claseForms/index.html
@@ -9,6 +9,13 @@
   <body>
     <main>
       <section>
+        <!-- Para hacer uso de un formulario para el usuario, es necesario hacerlo con
+          la etiqueta form, y lo que las compone, como el label y el input, es buena
+          práctica, ya que también permite tener control y seguimiento de los datos
+          del formulario, además de que sigue una estructura limpia y fácil de entender
+          Cada input tiene un tipo, como "text", "date", "time", entre otros, es necesario
+          utilizar los types correspondientes, ya que le facilitan la entrada de datos al
+          usuario -->
         <form action="">
           <label for="name">
             <span>What's your name?</span>
