--- a/claseImg/index.html
+++ b/claseImg/index.html
@@ -9,6 +9,10 @@
   <body>
     <main>
       <section>
+        <!-- La etiqueta figure permite utilizar múltiples imágenes en el mismo
+          contenedor, además, con la etiqueta figcaption, se puede añadir un texto
+          a la imagen, es mejor práctica que simplemente utilizar un div como
+          contenedor para imágenes -->
         <figure>
           <img
             src="https://images.pexels.com/photos/1543793/pexels-photo-1543793.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
