--- a/claseSelect/select.html
+++ b/claseSelect/select.html
@@ -15,6 +15,12 @@
           <option value="CSS">CSS</option>
           <option value="React.js">React.js</option>
         </select> -->
+        <!-- Es un tipo de input, en el cual se muestran distintas opciones en la lista,
+          la mejor práctica para resolver este problema es utilizando el input con su
+          type de "list", al cual se le asignará un nombre o un "id", después, con ese
+          id, se pueden generar las opciones con los distintos valores. Es mejor práctica,
+          debido a que si son muchas opciones, el usuario puede escribir en el input, y se
+          filtrará en todas las opciones existentes -->
         <input list="courses" />
         <datalist id="courses">
           <option value="JavaScript"></option>
