--- a/claseVideo/index.html
+++ b/claseVideo/index.html
@@ -9,6 +9,11 @@
   <body>
     <main>
       <section>
+        <!-- Se utiliza la etiqueta video para insertar archivos de video, 
+          la etiqueta video tiene como atributos "controls", el cual permite renderizar
+          los controles de reproducción para el usuario, y el atributo preload, el cual
+          sirve para precargar el video en el momento que se carga la página, por último,
+          se debe de evitar la reproducción automática de videos, ya que está prohibido -->
         <video controls preload="auto">
           <source
             src="./Actividad16-RuízRubioEfrén-AlmacenesDatos.mkv#t=10,30"
