Examples of the 4 combinators

--- a/claseCombinadores/index.html
+++ b/claseCombinadores/index.html
@@ -9,7 +9,21 @@
   </head>
   <body>
     <main>
-      <section>
+      <div>
+        <article>
+          <p>I'm a paragraph</p>
+        </article>
+        <article>
+          <p>I'm a paragraph</p>
+        </article>
+        <section>
+          <div>
+            <p>I'm a paragraph</p>
+          </div>
+        </section>
+        <p>I'm a paragraph</p>
+      </div>
+      <!-- <section>
         <div>
           <h2>I'm a h2</h2>
           <p>I'm a paragraph</p>
@@ -19,7 +33,7 @@
           <h2>I'm a h2</h2>
           <p>I'm a paragraph</p>
         </div>
-      </section>
+      </section> -->
     </main>
   </body>
 </html>
