Challenge of position done

--- a/clasePosition/index.html
+++ b/clasePosition/index.html
@@ -14,7 +14,7 @@
       <div class="box" id="three">3</div>
       <div class="box" id="four">4</div>
     </div> -->
-    <main>
+    <main class="main-container">
       <div class="parent">
         <div class="box" id="one"><p class="main-title">Texto ejemplo</p></div>
         <div class="box" id="two">
